Added auto-reload on scrolling for showing more files

--- a/views/index.haml
+++ b/views/index.haml
@@ -25,4 +25,4 @@
             %th.col-xs-1 Size
             %th.col-xs-1 Action
         %tbody
-      %button.btn.btn-default(type="button" id="loadmore") Load more
+      %img#loader(src="loader.gif")
