Added support for showing different versions

--- a/views/files.haml
+++ b/views/files.haml
@@ -4,4 +4,5 @@
     %td #{o[:date]}
     %td #{o[:size]} MB
     %td
-      %a(href="download/#{o[:id]}") Download
+      %a(href="#{o[:id]}/download") Download
+      %a.openmodal(href="#" key="#{o[:id]}") Versions
