Centered loading spinners and added icons for Download and Showing Versions

--- a/views/files.haml
+++ b/views/files.haml
@@ -4,5 +4,5 @@
     %td #{o[:date]}
     %td #{o[:size]} MB
     %td
-      %a(href="#{o[:id]}/download") Download
-      %a.openmodal(href="#" key="#{o[:id]}") Versions
+      %a.glyphicon.glyphicon-download(href="#{o[:id]}/download")
+      %a.openmodal.glyphicon.glyphicon-list(href="#" key="#{o[:id]}")
