--- a/views/modal.haml
+++ b/views/modal.haml
@@ -8,8 +8,8 @@
         %table.table.table-condensed
           %thead
             %tr
-              %th.col-xs-6 Date
-              %th.col-xs-2 Size
-              %th.col-xs-4 Action
+              %th.col-s-8 Date
+              %th.col-s-3 Size
+              %th.col-s-1 Action
               %tbody#versions
-        %img#versionloader(src="loader.gif")
+        %img#versionloader.img-responsive.img-center(src="loader.gif")
