--- a/views/versions.haml
+++ b/views/versions.haml
@@ -3,4 +3,4 @@
     %td #{o[:date]}
     %td #{o[:size]} MB
     %td
-      %a(href="#{o[:id]}/download/#{o[:version]}") Download
+      %a.glyphicon.glyphicon-download(href="#{o[:id]}/download/#{o[:version]}")
