--- a/views/index.haml
+++ b/views/index.haml
@@ -1,13 +1,13 @@
 !!! 5
 %html
   %head
-    %script(src="jquery.min.js")
-    %script(src="bootstrap.min.js")
-    %script(src="script.js")
-    %link(rel="stylesheet" type="text/css" href="bootstrap.min.css")
-    %link(rel="stylesheet" type="text/css" href="site.css")
     %meta(charset="utf-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1")
+    %link(rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
+    %link(rel="stylesheet" type="text/css" href="site.css")
+    %script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js")
+    %script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
+    %script(src="script.js")
   %body
     .container
       %h1 Upload new file
