Added debounce for prefix and fixed modal bug

--- a/views/files.haml
+++ b/views/files.haml
@@ -5,4 +5,4 @@
     %td #{o[:size]} MB
     %td
       %a.glyphicon.glyphicon-download(href="#{o[:id]}/download")
-      %a.openmodal.glyphicon.glyphicon-list(href="#" key="#{o[:id]}")
+      %a.openmodal.glyphicon.glyphicon-list(href="#" data-toggle="modal" data-target="#versions-modal" key="#{o[:id]}")
