--- a/views/index.haml
+++ b/views/index.haml
@@ -6,7 +6,8 @@
     %link(rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
     %link(rel="stylesheet" type="text/css" href="site.css")
     %script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js")
-    %script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
+    %script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js")
+    %script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.js")
     %script(src="script.js")
   %body
     .container
